--- a/frontend/src/modules/helper/PostSubmission.css
+++ b/frontend/src/modules/helper/PostSubmission.css
@@ -293,7 +293,7 @@
   height: 35px;
 }
 .custom-pages-selector button {
-  height: 33px;
+  height: 35px;
   padding-top: unset !important;
   padding-bottom: unset !important;
 }
