--- a/frontend/src/style/themes/scss/infernal.scss
+++ b/frontend/src/style/themes/scss/infernal.scss
@@ -6,6 +6,11 @@
   display: none !important;
 }
 
+.checkboxCover {
+  display: inline-grid;
+  width: 100%;
+}
+
 .infernal .fl {
   float: none !important;
 }
